<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="bg.adastragrp.adastrafaceapp.view_models.LoginViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true"
            app:cardElevation="10dp"
            app:cardBackgroundColor="@color/redColor"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/et_email"
                    style="@style/LoginEditTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="32dp"
                    android:layout_marginStart="8dp"
                    android:hint="@string/email"
                    app:errorTextAppearance="@style/TextInputErrorStyle"
                    app:errorText="@{viewModel.emailErrorMessage}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/img_email"
                    app:layout_constraintTop_toTopOf="parent">

                    <android.support.design.widget.TextInputEditText
                        style="@style/LoginEditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textEmailAddress"
                        android:text="@={viewModel.email}"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/et_password"
                    style="@style/LoginEditTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="32dp"
                    android:layout_marginStart="8dp"
                    android:hint="@string/password"
                    app:errorTextAppearance="@style/TextInputErrorStyle"
                    app:errorText="@{viewModel.passwordErrorMessage}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/img_password"
                    app:layout_constraintTop_toBottomOf="@+id/et_email">

                    <android.support.design.widget.TextInputEditText
                        style="@style/LoginEditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPassword"
                        android:text="@={viewModel.password}" />

                </android.support.design.widget.TextInputLayout>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_login"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="32dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:paddingBottom="24dp"
                    android:paddingTop="24dp"
                    android:text="@{viewModel.isLoading ? `` : @string/login}"
                    android:enabled="@{viewModel.isLoading ? false : true}"
                    app:backgroundTint="@android:color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_password" />

                <TextView
                    android:id="@+id/txt_register"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/registerDescription"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:typeface="serif"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_login"
                    app:layout_constraintVertical_bias="0.0" />

                <ImageView
                    android:id="@+id/img_email"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/icon_email_white"
                    android:contentDescription="@string/icon_email"
                    app:layout_constraintBottom_toBottomOf="@+id/et_email"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/et_email" />

                <ImageView
                    android:id="@+id/img_password"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/icon_password"
                    android:src="@drawable/icon_key"
                    app:layout_constraintBottom_toBottomOf="@+id/et_password"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/et_password" />

                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:theme="@style/ProgressBarColor"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}"
                    app:layout_constraintBottom_toBottomOf="@+id/btn_login"
                    app:layout_constraintEnd_toEndOf="@+id/btn_login"
                    app:layout_constraintStart_toStartOf="@+id/btn_login"
                    app:layout_constraintTop_toTopOf="@+id/btn_login" />

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

    </ScrollView>

</layout>