<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="bg.adastragrp.adastrafaceapp.utils.ConverterUtils" />

        <variable
            name="viewModel"
            type="bg.adastragrp.adastrafaceapp.view_models.DetailedUserViewModel" />
    </data>
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:fillViewport="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/avatar_background"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/avatar_background"
                android:scaleType="centerCrop"
                android:src="@drawable/avatar_background"
                app:layout_constraintBottom_toBottomOf="@+id/position"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="@dimen/avatar_profile_size"
                android:layout_height="@dimen/avatar_profile_size"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:contentDescription="@string/avatar"
                android:src="@{viewModel.user.avatarUrl}"
                app:errorImage="@{@drawable/profile_default_image}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@{viewModel.user.name}"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:typeface="serif"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/avatar" />

            <TextView
                android:id="@+id/position"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:paddingBottom="32dp"
                android:text="@{viewModel.user.position}"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:typeface="serif"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name" />

            <android.support.v7.widget.CardView
                android:id="@+id/general_information_card"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:cardElevation="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/position"
                app:layout_constraintVertical_bias="0.0">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/general_information_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/general_information"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <View
                        android:id="@+id/general_information_separator"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:background="@color/colorDivider"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/general_information_title" />

                    <ImageView
                        android:id="@+id/img_email"
                        android:layout_width="@dimen/icons_profile_information"
                        android:layout_height="@dimen/icons_profile_information"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:contentDescription="@string/icon_email"
                        android:src="@drawable/icon_email"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/general_information_separator" />

                    <TextView
                        android:id="@+id/email"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@{viewModel.user.email}"
                        app:layout_constraintBottom_toBottomOf="@+id/img_email"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/img_email"
                        app:layout_constraintTop_toTopOf="@+id/img_email" />

                    <ImageView
                        android:id="@+id/img_department"
                        android:layout_width="@dimen/icons_profile_information"
                        android:layout_height="@dimen/icons_profile_information"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:contentDescription="@string/icon_department"
                        android:src="@drawable/icon_department"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/img_email" />

                    <TextView
                        android:id="@+id/department"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@{viewModel.user.department}"
                        app:layout_constraintBottom_toBottomOf="@+id/img_department"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/img_department"
                        app:layout_constraintTop_toTopOf="@+id/img_department" />

                    <ImageView
                        android:id="@+id/img_seniority"
                        android:layout_width="@dimen/icons_profile_information"
                        android:layout_height="@dimen/icons_profile_information"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:contentDescription="@string/icon_seniority"
                        android:src="@drawable/icon_seniority"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/img_department" />

                    <TextView
                        android:id="@+id/seniority"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@{viewModel.user.seniority}"
                        app:layout_constraintBottom_toBottomOf="@+id/img_seniority"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/img_seniority"
                        app:layout_constraintTop_toTopOf="@+id/img_seniority" />

                    <ImageView
                        android:id="@+id/img_location"
                        android:layout_width="@dimen/icons_profile_information"
                        android:layout_height="@dimen/icons_profile_information"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:contentDescription="@string/icon_pin"
                        android:src="@drawable/icon_pin"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/img_seniority" />

                    <TextView
                        android:id="@+id/location"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@{viewModel.user.office + `, ` + viewModel.user.room}"
                        app:layout_constraintBottom_toBottomOf="@+id/img_location"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/img_location"
                        app:layout_constraintTop_toTopOf="@+id/img_location" />

                    <ImageView
                        android:id="@+id/img_date"
                        android:layout_width="@dimen/icons_profile_information"
                        android:layout_height="@dimen/icons_profile_information"
                        android:layout_marginBottom="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:contentDescription="@string/icon_time"
                        android:src="@drawable/icon_time"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/img_location" />

                    <TextView
                        android:id="@+id/date"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@{ConverterUtils.getUserJoinedDate(viewModel.user.whenJoined)}"
                        app:layout_constraintBottom_toBottomOf="@+id/img_date"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/img_date"
                        app:layout_constraintTop_toTopOf="@+id/img_date" />

                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>

        </android.support.constraint.ConstraintLayout>

    </ScrollView>
    
</layout>