<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="bg.adastragrp.adastrafaceapp.utils.ConverterUtils" />

        <variable
            name="item"
            type="bg.adastragrp.adastrafaceapp.data.models.User" />
    </data>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/avatar"
                android:cropToPadding="false"
                android:scaleType="centerInside"
                android:src="@{item.avatarUrl}"
                android:visibility="visible"
                app:errorImage="@{@drawable/profile_default_image}"
                app:layout_constraintBottom_toTopOf="@+id/barrier_top_content"
                app:layout_constraintEnd_toStartOf="@+id/vertical_guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/name" />

            <android.support.constraint.Guideline
                android:id="@+id/vertical_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="120dp" />

            <TextView
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@{item.name}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/vertical_guideline"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@{item.email}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/vertical_guideline"
                app:layout_constraintTop_toBottomOf="@+id/name" />

            <TextView
                android:id="@+id/position"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@{item.position}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/vertical_guideline"
                app:layout_constraintTop_toBottomOf="@+id/email" />

            <android.support.constraint.Barrier
                android:id="@+id/barrier_top_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="position,name,email,avatar" />

            <ImageView
                android:id="@+id/img_pin"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/icon_pin"
                android:src="@drawable/icon_pin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/barrier_top_content" />

            <TextView
                android:id="@+id/location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@{item.office + `, ` + item.room}"
                app:layout_constraintBottom_toBottomOf="@+id/img_pin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_pin"
                app:layout_constraintTop_toTopOf="@+id/img_pin" />

            <ImageView
                android:id="@+id/img_time"
                android:layout_width="@dimen/icons_profile_information"
                android:layout_height="@dimen/icons_profile_information"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/icon_time"
                android:src="@drawable/icon_time"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_pin" />

            <TextView
                android:id="@+id/time_in_company"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@{ConverterUtils.getUserJoinedDate(item.whenJoined)}"
                app:layout_constraintBottom_toBottomOf="@+id/img_time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_time"
                app:layout_constraintTop_toTopOf="@+id/img_time" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</layout>